# exgent

./: PROJECT_OVERVIEW.md  README.md
excel_client/: README.md  eslint.config.js  index.html  package-lock.json  package.json
excel_client/src/: App.tsx  index.css  instructions.md  main.tsx
excel_client/src/components/: ChatComponent.md  ChatComponent.tsx  ExcelView.tsx  Header.tsx  OntologyViewWidget.tsx  RowGroupDisplay.tsx  TagCell.tsx
excel_client/src/domain/: ChatStreamProvider.tsx  OntologyView.ts  domain.tsx  googleAdkTypes.ts  ontologyView.md  service.tsx  serviceProvider.tsx
excel_client/src/pages/: SheetInfoPage.md  SheetInfoPage.tsx  Welcome.tsx  WelcomePage.md
excel_client/src/services/: serviceProvider.tsx
excel_server/: .env_sample  .gitignore  README.md  pyproject.toml
excel_server/app/: __main__.py  domain.py  main.py
excel_server/app/exgent/: agent.py  agent_utils.py  tag_groups_agent.py  tag_groups_utils.py  validate_excel_agent.py  validate_sheet_structure_agent.py
excel_server/app/file_extract_store/: file_extract_store.py  instructions.md
excel_server/app/file_store/: file_store.py  instructions.md
excel_server/app/server/: excel_utils.md  excel_utils.py  instructions.md  server.py
excel_server/app/sheet_info_store/: instructions.md  sheet_info_store.py
excel_server/tests/: sample.xlsx  test_excel_utils.py  test_file_extract_store.py  test_file_store.py  test_server.py  test_sheet_info_store.py
