[project]
name = "excel-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = ["pytest>=9.0.2"]

[tool.pytest.ini_options]
pythonpath = "."
